Fixing problems in the module:   *Show an error when de feed does not have any news.   *Open a link in a new window   *Fix the card spacing in iOS   *Clean wp tags from description

--- a/style.css
+++ b/style.css
@@ -7,12 +7,6 @@
   text-align: center;
   padding-top: 40%;
 }
-.rss .card-content{
-  height: 44px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: block;
-  display: -webkit-box;
-  -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;
+.rss .msg{
+  margin: 20px;
 }
